# bourso-desktop

./: .env.example  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml
docs/: getting_started.md
src/: App.tsx  constants.ts  types.ts
src-tauri/: Cargo.toml  run_if_needed.sh  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: assets.rs  cli.rs  cron.rs  files.rs  lib.rs  main.rs  order.rs  scheduler.rs  trading.rs
src/components/: AccountsList.tsx  AssetPicker.tsx  AssetsChart.tsx  MfaForm.tsx  OrderForm.tsx  Orders.tsx  PerformanceSummary.tsx  SetupDca.tsx  TransferModal.tsx
src/components/ui/: command.tsx
src/lib/: logs.ts  mockData.ts  progress.ts
src/utils/: assetUtils.ts  format.ts  jobUtils.ts  misc.ts
src/views/: dashboard.tsx  login.tsx
